--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrajs/collections": "0.0.9",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
