--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrajs/collections": "0.0.9",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "config": "^3.3.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
