--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -38,6 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000",
-  "devDependencies": {}
+  "proxy": "http://localhost:5000"
 }
