--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mern_skeleton",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "14.x"
+  },
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
